# text-to-cypher

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  flake.nix
crates/subcommand/: Cargo.toml
crates/subcommand/src/: lib.rs
data/: distinct_schemas.json
data/text-to-cypher-gemma3-2025:4b/: Modelfile  SOURCE.md
nix/: package.nix
results/: v0.1.0.json
results/datasets/: v0.1.0.json
results/datasets/evaluate/: v0.1.0-00000041.json  v0.1.0-00000048.json  v0.1.0-00000059.json  v0.1.0-00000111.json  v0.1.0-00000130.json  v0.1.0-00000133.json  v0.1.0-00000134.json  v0.1.0-00000177.json  v0.1.0-00000182.json  v0.1.0-00000215.json  v0.1.0-00000237.json  (+7 more)
results/pretrain/: v0.1.0-00000000.json  v0.1.0-00000001.json  v0.1.0-00000002.json  v0.1.0-00000003.json  v0.1.0-00000004.json  v0.1.0-00000005.json  v0.1.0-00000006.json  v0.1.0-00000007.json  v0.1.0-00000008.json  v0.1.0-00000009.json  v0.1.0-00000010.json  v0.1.0-00000011.json  v0.1.0-00000012.json  v0.1.0-00000013.json  v0.1.0-00000014.json  v0.1.0-00000015.json  v0.1.0-00000016.json  v0.1.0-00000017.json  v0.1.0-00000018.json  v0.1.0-00000019.json  v0.1.0-00000020.json  v0.1.0-00000021.json  v0.1.0-00000022.json  v0.1.0-00000023.json  v0.1.0-00000024.json  v0.1.0-00000025.json  v0.1.0-00000026.json  v0.1.0-00000027.json  v0.1.0-00000028.json  v0.1.0-00000029.json  v0.1.0-00000030.json  v0.1.0-00000031.json  v0.1.0-00000032.json  v0.1.0-00000033.json  v0.1.0-00000034.json  v0.1.0-00000035.json  v0.1.0-00000036.json  v0.1.0-00000037.json  v0.1.0-00000038.json  v0.1.0-00000039.json  (+460 more)
src/: cli.rs  main.rs  models.rs  utils.rs
src/binary/: mod.rs
src/subcommand/: mod.rs
(+9 files in other folders)
