[package]
name = "text-to-cypher"
version = "0.1.0"
edition = "2024"
authors = [
  "c2fc2f <contact@c2fc2f.com>"
]
description = "A comparative study of two Neo4j query architectures: Direct Translation vs. Staged Translation (NL -> CNL/SQUALL/Sparklis -> Cypher)."
readme = "README.md"
repository = "https://github.com/c2fc2f/text-to-cypher"
license = "MIT"
keywords = [
  "neo4j", 
  "cypher", 
  "nlp", 
  "cnl", 
  "squall",
  "sparklis"
]
categories = [
  "database", 
  "parser-implementations"
]

[[bin]]
name = "t2c"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rig-core = "0.33"
rand = "0.10"
futures = "0.3"
indicatif = "0.18"
ratatui = "0.30"
crossterm = "=0.29"
